added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -8,3 +8,18 @@
   title = {{Canonical Problem: Localization and Tracking}},
   booktitle = {Wireless Sensor Networks},
 }
+
+
+@article{Glozman_2010,
+  doi = {10.7863/jum.2010.29.3.387},
+  url = {https://doi.org/10.7863%2Fjum.2010.29.3.387},
+  year = {2010},
+  month = {mar},
+  publisher = {American Institute of Ultrasound in Medicine},
+  volume = {29},
+  number = {3},
+  pages = {387--398},
+  author = {Tanya Glozman and Haim Azhari},
+  title = {{A Method for Characterization of Tissue Elastic Properties Combining Ultrasonic Computed Tomography With Elastography}},
+  journal = {Journal of Ultrasound in Medicine},
+}
