added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -23,3 +23,15 @@
   title = {{A Method for Characterization of Tissue Elastic Properties Combining Ultrasonic Computed Tomography With Elastography}},
   journal = {Journal of Ultrasound in Medicine},
 }
+
+
+@article{glozman2010method,
+  title = {{A method for characterization of tissue elastic properties combining ultrasonic computed tomography with elastography}},
+  author = {Glozman, Tanya and Azhari, Haim},
+  journal = {Journal of Ultrasound in Medicine},
+  volume = {29},
+  number = {3},
+  pages = {387--398},
+  year = {2010},
+  publisher = {Am inst Ulrrasound Med},
+}
