--- a/36a5.tex
+++ b/36a5.tex
@@ -1,2 +1,5 @@
 This is now a \textbf{LaTeX} block.
 
+\begin{equation}
+\frac{V_{ sup}^2}{V_{ norm}^2} = [1 + \Delta \nu \, \tau \, T^2 ]^{-1} \, ,
+\end{equation}
