added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -35,3 +35,14 @@
   year = {2010},
   publisher = {Am inst Ulrrasound Med},
 }
+
+
+@incollection{Blandford,
+  doi = {10.1007/bfb0021115},
+  url = {https://doi.org/10.1007%2Fbfb0021115},
+  publisher = {Springer Nature},
+  pages = {14--30},
+  author = {Roger D. Blandford},
+  title = {{Astrophysical jets}},
+  booktitle = {Perspectives in Fluid Mechanics},
+}
