added missing citations to bibliography

--- a/bibliography/biblio.bib
+++ b/bibliography/biblio.bib
@@ -46,3 +46,13 @@
   title = {{Astrophysical jets}},
   booktitle = {Perspectives in Fluid Mechanics},
 }
+
+
+@inproceedings{Blandford_2013,
+  doi = {10.1063/1.4792588},
+  url = {https://doi.org/10.1063%2F1.4792588},
+  year = {2013},
+  publisher = {{AIP} Publishing},
+  author = {Roger Blandford},
+  title = {{The accelerating universe}},
+}
